[tool.poetry]
name = "volcanobt"
version = "0.0.1"
description = "Storz & Bickel Volcano BLE assistant"
license = "MIT"
authors = ["hookedonunix <hookedonunix@protonmail.com>"]
repository = "https://github.com/hookedonunix/volcano-bt"
readme = "README.md"
packages = [
  { include = "volcanobt" }
]
#include = ["CHANGELOG"]

[tool.poetry.scripts]
volcanocli = "volcanobt.cli:run"

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
bleak = ">=0.14.2"

[tool.poetry.dev-dependencies]
toml = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = "volcanobt"
known_third_party = ["click"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"